feat(validation): validate upstream data against swagger def - improve error handling
